--- a/css/style.css
+++ b/css/style.css
@@ -7,11 +7,11 @@ body {
 }
 
 a {
-  color: #007bff;
+  color: #6b4798b8;
 }
 
 a:hover {
-  color: #0b6bd3;
+  color: #94A5EF;
   text-decoration: none;
 }
 
@@ -30,7 +30,7 @@ h1, h2, h3, h4, h5, h6, .font-primary {
   border-radius: 3px;
   right: 15px;
   bottom: 15px;
-  background: #00ccff;
+  background: #6b4798b8;
   color: #fff;
   transition: display 0.5s ease-in-out;
   z-index: 99999;
@@ -100,7 +100,7 @@ h1, h2, h3, h4, h5, h6, .font-primary {
 .nav-menu a {
   display: block;
   position: relative;
-  color: #5a6570;
+  color: #19191a;
   padding: 10px 16px;
   transition: 0.3s;
   font-size: 15px;
@@ -148,7 +148,7 @@ h1, h2, h3, h4, h5, h6, .font-primary {
 .mobile-nav a {
   display: block;
   position: relative;
-  color: #e6dfef63;
+  color: #94A5EF;
   padding: 10px 20px;
   font-weight: 500;
   transition: 0.3s;
@@ -160,7 +160,7 @@ h1, h2, h3, h4, h5, h6, .font-primary {
 }
 
 .mobile-nav .get-started a {
-  background: 00ccff;
+  background: #94A5EF;
   color: #fff;
   border-radius: 50px;
   margin: 15px;
@@ -395,7 +395,7 @@ section {
   transition: 0.5s;
   margin: 10px;
   color: #fff;
-  background: #00ccff;
+  background: #6b4798b8;
 }
 
 #about .btn-get-cv:hover {
@@ -452,7 +452,7 @@ section {
 
 .services .icon-box:hover {
   transform: translateY(-5px);
-  border-color:#00ccff;
+  border-color:#6b4798b8;
   transform: scale(1.1);
 }
 
@@ -460,7 +460,7 @@ section {
   font-size: 48px;
   line-height: 1;
   margin-bottom: 15px;
-  color:#00ccff;
+  color:#94A5EF;
 }
 
 .services .title {
@@ -507,7 +507,7 @@ section {
 }
 
 .portfolio #portfolio-flters li:hover, .portfolio #portfolio-flters li.filter-active {
-  color:#00ccff;
+  color:#94A5EF;
 }
 
 .portfolio #portfolio-flters li:last-child {
@@ -552,7 +552,7 @@ section {
 }
 
 .portfolio .portfolio-wrap .portfolio-links a {
-  color: #00ccff;
+  color: #94A5EF;
   margin: 0 4px;
   font-size: 18px;
   line-height: 1;
@@ -572,7 +572,7 @@ section {
 }
 
 .portfolio .portfolio-wrap .portfolio-links a:hover {
-  background:#00ccff;
+  background:#94A5EF;
   color: #fff;
 }
 
@@ -620,8 +620,8 @@ section {
   background-color:  #fff;
 }
 .contact .info {
-  border-top: 3px solid #00ccff;
-  border-bottom: 3px solid #00ccff;
+  border-top: 3px solid #94A5EF;
+  border-bottom: 3px solid #94A5EF;
   padding: 30px;
   background: #fff;
   width: 100%;
@@ -630,7 +630,7 @@ section {
 
 .contact .info i {
   font-size: 20px;
-  color: #00ccff;
+  color: #94A5EF;
   float: left;
   width: 44px;
   height: 44px;
@@ -647,7 +647,7 @@ section {
   font-size: 22px;
   font-weight: 600;
   margin-bottom: 5px;
-  color:#00ccff;
+  color:#94A5EF;
 }
 
 .contact .info p {
@@ -668,7 +668,7 @@ section {
 .contact .info .social-links a {
   font-size: 18px;
   display: inline-block;
-  background: #333;
+  background: #94A5EF;
   color: #fff;
   line-height: 1;
   padding: 8px 0;
@@ -709,7 +709,7 @@ section {
 --------------------------------------------------------------*/
 #footer {
   padding: 0 0 30px 0;
-  color: #212529;
+  color: #94A5EF;
   font-size: 14px;
   background:#ECF7FE;
 }
@@ -722,7 +722,7 @@ section {
 #footer .footer-top p {
   font-size: 32px;
   font-weight: bold;
-  color: #4e4039;
+  color: #94A5EF;
   position: relative;
   text-align: center;
 }
@@ -735,7 +735,7 @@ section {
 #footer .footer-top .social-links a {
   font-size: 18px;
   display: inline-block;
-  background: #abd5ee;
+  background: #94A5EF;
   color: rgb(17, 17, 17);
   line-height: 1;
   padding: 8px 0;
@@ -749,7 +749,7 @@ section {
 
 #footer .footer-top .social-links a:hover {
   background: #d5cae330;
-  color: #02314d;
+  color: #94A5EF;
   text-decoration: none;
   transform: scale(1.1);
 }
