--- a/css/style.css
+++ b/css/style.css
@@ -669,7 +669,7 @@ section {
   font-size: 18px;
   display: inline-block;
   background: #94A5EF;
-  color: #fff;
+  color: rgb(218, 44, 44);
   line-height: 1;
   padding: 8px 0;
   border-radius: 50%;
@@ -711,18 +711,19 @@ section {
   padding: 0 0 30px 0;
   color: #94A5EF;
   font-size: 14px;
-  background:#ECF7FE;
+  background:#94A5EF;
 }
 
 #footer .footer-top {
   padding: 60px 0 30px 0;
   background: #fff;
+  
 }
 
 #footer .footer-top p {
   font-size: 32px;
   font-weight: bold;
-  color: #94A5EF;
+  color: #030303;
   position: relative;
   text-align: center;
 }
@@ -748,7 +749,7 @@ section {
 }
 
 #footer .footer-top .social-links a:hover {
-  background: #d5cae330;
+  background: #4a09a030;
   color: #94A5EF;
   text-decoration: none;
   transform: scale(1.1);
@@ -756,6 +757,7 @@ section {
 
 #footer .copyright {
   text-align: center;
+  color: #111;
 }
 
 @media (max-width: 575px) {
