--- a/css/style.css
+++ b/css/style.css
@@ -211,11 +211,11 @@ h1, h2, h3, h4, h5, h6, .font-primary {
   color: #fff;
 } 
 .icofont-navigation-menu:before {
-  color:#00ccff;
+  color:#94A5EF;
 }
 
 .icofont-close:before {
-  color: #00ccff;
+  color: #94A5EF;
 }
 
 /*--------------------------------------------------------------
